[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddpg-per"
version = "0.1.0"
description = "Deep Deterministic Policy Gradient with Prioritized Experience Replay"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["reinforcement-learning", "DDPG", "prioritized-experience-replay", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21",
    "torch>=1.11",
    "gym>=0.21",
    "pybullet>=3.2",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ddpg-per-train = "train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ddpg_per*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
